--- a/project.json
+++ b/project.json
@@ -7,5 +7,7 @@
         "go"
     ],
     "Version": "0.0.1",
-    "Author": "Conrad Heinrich Carl"
+    "Authors": [
+        "Conrad Heinrich Carl"
+    ]
 }
